--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- hackerzhou</div>
+						<div class="signature">- YeeWii</div>
 					</div>
 				</div>
 			</div>
 		</div>
 		<div id="copyright">
 			Inspired by <a href="http://www.openrise.com/lab/FlowerPower/">FlowerPower</a> project.<br />
-			Copyright © 2014 <a href='http://hackerzhou.me'>hackerzhou.me</a> 2009-2014
+			Copyright © 2016 <a href='http://yeewii.github.io'>YeeWii</a> 2016
 		</div>
 	</div>
 	<script type="text/javascript">
